# torchid

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHECKLIST.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
benchmarks/: bench.py
docs/: api.md  architecture.md  estimators.md  getting-started.md  index.md  parity.md  performance.md
docs/tutorials/: embeddings_id.md
examples/: embeddings_id.ipynb
scripts/: bench_a100.sbatch  bench_a100_emb.sbatch  bench_h100.sbatch  bench_h100_emb.sbatch
src/torchid/: __init__.py  _primitives.py  datasets.py  metrics.py  parity.py  primitives.py  wrappers.py
src/torchid/estimators/: __init__.py  base.py  corrint.py  danco.py  ess.py  fishers.py  knn.py  lpca.py  mada.py  mind_ml.py  mle.py  mom.py  tle.py  twonn.py
tests/: _parity.py  conftest.py  test_cuda.py  test_estimators_unit.py  test_example.py  test_metrics.py  test_parity_corrint.py  test_parity_lpca.py  test_parity_mind_ml.py  test_parity_mle.py  test_parity_mom.py  test_parity_remaining.py  test_parity_twonn.py  test_primitives.py  test_wrappers.py
