[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.3,<1" ]

[project]
name = "torchid"
version = "0.2.0"
description = "GPU-accelerated intrinsic dimension estimators in PyTorch (port of scikit-dimension)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Isaac Corley", email = "isaac.corley@proton.me" },
]
requires-python = ">=3.13"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "faiss-cpu>=1.13.2",
  "numpy",
  "scipy>=1.11",       # FisherS uses scipy.special.lambertw for the separability inversion
  "torch",
  "torchmetrics>=1.9",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3",
  "pytest>=8.4.2",
  "pytest-cov>=7",
  "ruff>=0.14.1",
  "ty>=0.0.1a23",
]
docs = [
  "jupyter>=1.1.1",
  "matplotlib>=3.10.9",
  "nbconvert>=7.17.1",
  "timm>=1.0.26",
  "torchvision>=0.26",
]
validation = [
  "matplotlib>=3.10.9",
  "pandas>=3.0.2",
  "scikit-dimension>=0.3.4",
  "scikit-learn>=1.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [ "examples/" ]  # notebooks are illustrative; not held to library lint
force-exclude = true
lint.extend-select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EXE",  # flake8-executable
  "FA",   # flake8-future-annotations
  "FLY",  # flynt
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "PYI",  # flake8-pyi
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "TCH",  # flake8-type-checking
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
lint.ignore = [
  "ANN401",
  "COM812",
  "COM819",
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "PT012",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "RET505",
  "RET506",
  "RUF001", # ambiguous unicode × − ρ σ ℓ in docstrings / benchmark output — intentional
  "RUF002",
  "RUF005",
  "RUF059", # unused unpack variables (intentional in tuple returns we want to be explicit about)
  "SIM108",
  "TRY003",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
]
lint.extend-per-file-ignores."benchmarks/**" = [
  "ANN001",
  "ANN201",
  "ANN202",
  "ANN204",
  "B023",   # bench lambdas capture loop vars but are called eagerly
  "UP031",
]
lint.extend-per-file-ignores."scripts/**" = [
  "ANN001",
  "ANN201",
]
lint.extend-per-file-ignores."tests/**" = [
  "ANN001",
  "ANN003",
  "ANN201",
  "ANN202",
  "ANN204",
  "RUF029",
  "SIM117",
  "SIM300",
]
lint.isort.known-first-party = [ "torchid" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [
  "cuda: test requires a CUDA device (auto-skipped when torch.cuda.is_available() is False)",
]
